- Added UI for Todos drawer. It doesn't contain any non-presentational logic yet.  - Fixed issue where a scrollbar appeared during transitions by adding overflow hidden to Workspace component.

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,16 @@ body, html, #root, .fillRemainingHeight {
     justify-content: center;
     align-items: center;
 }
+
+button.link {
+    background: none;
+	margin: 0;
+	padding: 0;
+	border: none;
+    cursor: pointer;
+}
+
+button.link:hover {
+    color: #cbd3da !important;
+    text-decoration: underline
+}
